Fix leak of mCurrentFocus that caused input element in URL bar to leak.  r=saari@netscape.com   sr=hyatt@netscape.com  b=59042